--- a/mocksocks-junit/pom.xml
+++ b/mocksocks-junit/pom.xml
@@ -9,15 +9,22 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dproxy</artifactId>
+    <groupId>com.dianping</groupId>
+    <artifactId>mocksocks-junit</artifactId>
+    <version>0.0.2-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty</artifactId>
-            <version>3.7.0.Final</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.4</version>
+            <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <artifactId>dproxy</artifactId>
+            <groupId>com.dianping</groupId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
