--- a/mocksock-proxy/pom.xml
+++ b/mocksock-proxy/pom.xml
@@ -3,28 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>monkeysocks</artifactId>
+        <artifactId>mocksocks</artifactId>
         <groupId>com.dianping</groupId>
         <version>0.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.dianping</groupId>
-    <artifactId>mocksocks-junit</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <artifactId>mocksock-proxy</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.4</version>
-            <scope>provided</scope>
+            <groupId>io.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.7.0.Final</version>
         </dependency>
-        <dependency>
-            <artifactId>mocksock-proxy</artifactId>
-            <groupId>com.dianping</groupId>
-            <version>0.0.2-SNAPSHOT</version>
-        </dependency>
+
     </dependencies>
 
 
