--- a/mocksock-proxy/pom.xml
+++ b/mocksock-proxy/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>netty</artifactId>
             <version>3.7.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.resthub</groupId>
+            <artifactId>hessian</artifactId>
+            <version>4.0.8</version>
+        </dependency>
 
     </dependencies>
 
