--- a/mocksocks-sample/pom.xml
+++ b/mocksocks-sample/pom.xml
@@ -10,21 +10,21 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.dianping</groupId>
-    <artifactId>mocksocks-junit</artifactId>
+    <artifactId>mocksocks-sample</artifactId>
     <version>0.0.2-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.4</version>
-            <scope>provided</scope>
+            <groupId>com.dianping</groupId>
+            <artifactId>mocksocks-client</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <artifactId>mocksock-proxy</artifactId>
-            <groupId>com.dianping</groupId>
-            <version>0.0.2-SNAPSHOT</version>
+            <groupId>org.jboss.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.2.9.Final</version>
         </dependency>
+
     </dependencies>
 
 
