--- a/mocksocks-gui/pom.xml
+++ b/mocksocks-gui/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>jgoodies-common</artifactId>
             <version>1.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.jgoodies</groupId>
+            <artifactId>jgoodies-binding</artifactId>
+            <version>2.7.0</version>
+        </dependency>
     </dependencies>
 
 
