--- a/mocksocks-gui/pom.xml
+++ b/mocksocks-gui/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>jgoodies-binding</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.dianping</groupId>
+            <artifactId>mocksocks-proxy</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 
