--- a/mocksocks-proxy/pom.xml
+++ b/mocksocks-proxy/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>hessian</artifactId>
             <version>4.0.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>
 
     </dependencies>
 
