--- a/mocksocks-gui/pom.xml
+++ b/mocksocks-gui/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>mocksocks-proxy</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.174</version>
+        </dependency>
     </dependencies>
 
 
