--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>mocksocks-gui</module>
         <module>mocksocks-client</module>
         <module>mocksocks-sample</module>
+        <module>mocksocks-web</module>
     </modules>
 
     <build>
