--- a/mocksocks-gui/pom.xml
+++ b/mocksocks-gui/pom.xml
@@ -31,7 +31,7 @@
         </dependency>
         <dependency>
             <groupId>com.dianping</groupId>
-            <artifactId>mocksocks-proxy</artifactId>
+            <artifactId>mocksocks-transport</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
