--- a/mocksocks-web/pom.xml
+++ b/mocksocks-web/pom.xml
@@ -21,7 +21,7 @@
         </dependency>
         <dependency>
             <groupId>com.dianping</groupId>
-            <artifactId>mocksocks-proxy</artifactId>
+            <artifactId>mocksocks-transport</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
