add handler hook for shutdown

--- a/mocksocks-gui/pom.xml
+++ b/mocksocks-gui/pom.xml
@@ -89,7 +89,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.dianping.mocksocks.gui.gui.Main</mainClass>
+                            <mainClass>com.dianping.mocksocks.gui.gui.MocksocksDashboard</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
